# studies

./: .gitignore  CMakeLists.txt  db.sql
c++/: lab4.rar
c++/lab1/: Cat.cpp  Cat.h  Dog.h
c++/lab11/: Buffer.h  BufferArr.cpp  BufferArr.h  CMakeLists.txt  Elem.h  FileBuffer.cpp  FileBuffer.h  Person.h  Shop.cpp  Shop.h  Warehouse.cpp  Warehouse.h  main.cpp
c++/lab12/: Car.cpp  Car.h
c++/lab2/: Bufor.cpp  Bufor.h  CMakeLists.txt  Developer.cpp  Developer.h  Employee.cpp  Employee.h  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  TeamLeader.cpp  TeamLeader.h  circle.cpp  circle.h  figure.cpp  figure.h  main.cpp  square.cpp  square.h
c++/lab3/: Adding.h  Array.h  Student.h  main.cpp
c++/lab4/: CMakeLists.txt  Citizen.cpp  Citizen.h  City.cpp  City.h  PostalCode.cpp  PostalCode.h  main.cpp
c++/lab5/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
c++/lab7/: CMakeLists.txt  Editor.cpp  Editor.h  blackjack.cpp  dane.csv  main.cpp  students.cpp
c++/lab9/: blackjack.hpp  lab9.cpp  lab9.sln  lab9.vcxproj  lab9.vcxproj.filters
lab1/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
php/: composer.json  styles.css
php/lab1/: index.php  receive.php  types.php
php/lab2/: client.php  form.html  form.php  receive.php  receive2.php  receive3.php  receive4.php
php/lab3/: data.txt  files.php  gallery.php  images.html  images.php  images1.php  styles.css  temp.css  temp.html  utils.php
php/lab4/: data.txt  files.php  orders.txt  results.php  styles.css  utils.php
(+54 files in other folders)
